Attempting to fix CTA buttons position on mobile

--- a/final/assets/css/style.css
+++ b/final/assets/css/style.css
@@ -6,6 +6,10 @@
   --text-color: #232323;
 }
 
+* {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -18,6 +22,11 @@ header {
   background-color: var(--action-color);
 }
 
+p {
+  font-size: 18px;
+  line-height: 28px;
+}
+
 .main-nav {
   height: 125px;
   justify-content: center;
@@ -26,8 +35,8 @@ header {
 
 .main-nav h2 {
   color: #fff;
-  font-size: 1.4rem;
-  margin: 0 30px;
+  font-size: 1.2rem;
+  margin: 0 1rem;
 }
 
 .CTA {
@@ -76,8 +85,8 @@ header {
 
 .cta-buttons {
   position: absolute;
-  bottom: 20vh;
-  right: 2rem;
+  bottom: 20svh;
+  right: 1.4rem;
 }
 
 .cta-buttons a {
@@ -101,15 +110,6 @@ header {
 .main-volunteer {
   background-color: #82449885;
   margin-right: 1rem;
-}
-
-p {
-  font-size: 18px;
-  line-height: 28px;
-}
-
-* {
-  scroll-behavior: smooth;
 }
 
 .section-heading {
@@ -213,7 +213,7 @@ p {
 }
 
 footer {
-  padding: 1.4rem 1.4rem;
+  padding: 1.4rem;
   background-color: var(--secondary-color);
   color: var(--bg-color);
   display: grid;
@@ -259,8 +259,8 @@ footer h3 {
   display: block;
   /* You can also use relative/absolute here if you want to stay on the top */
   position: fixed;
-  top: 40px;
-  right: 50px;
+  top: 2.4rem;
+  right: 1.4rem;
   z-index: 1;
   -webkit-user-select: none;
   user-select: none;
@@ -347,17 +347,10 @@ footer h3 {
   transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-/*
-  * Ohyeah and the last one should go the other direction
-  */
 #menuToggle input:checked ~ span:nth-last-child(2) {
   transform: rotate(-45deg) translate(0, -1px);
 }
 
-/*
-  * Make this absolute positioned
-  * at the top left of the screen
-  */
 #menu {
   position: absolute;
   max-width: 400px;
